modules/ncml_module/tests/baselines/invalid_attrs/error_variableAgg_attrs.ncml.ddx
<?xml version="1.0" encoding="ISO-8859-1"?>
<response reqID="some_unique_value" xmlns="http://xml.opendap.org/ns/bes/1.0#">
    <getDDX>
        <BESError>
            <Type>3</Type>
            <Message>NCMLModule ParseError: at *.ncml line=7: Got invalid attribute for element = variableAgg The invalid attributes were: {nname}</Message>
            <Administrator>admin.email.address@your.domain.name</Administrator>
        </BESError>
    </getDDX>
</response>
